[gd_scene load_steps=5 format=2]

[ext_resource path="res://Test.gd" type="Script" id=1]
[ext_resource path="res://addons/naive_dialog_plugin/dialog_graph/runtime/DialogGraphRuntime.gd" type="Script" id=2]
[ext_resource path="res://DialogDataTest1.tres" type="Resource" id=3]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 15.0
content_margin_right = 15.0
content_margin_top = 15.0
content_margin_bottom = 15.0
bg_color = Color( 0.6, 0.6, 0.6, 0.721569 )
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Test" type="Node"]
script = ExtResource( 1 )

[node name="Runtime" type="Node" parent="."]
script = ExtResource( 2 )
dialog_graph_data = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="RichTextLabel" parent="Control"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -183.0
custom_styles/normal = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "1556456456546456456"
text = "1556456456546456456"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="Control/Label"]

[node name="TipLabel" type="Label" parent="Control/Label"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -612.0
margin_top = -29.0
margin_right = -13.0
margin_bottom = -5.0
text = "[Space] to continue ->"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -54.0
margin_top = -15.0
margin_right = 54.0
margin_bottom = 15.0
focus_mode = 0
text = "点击开始聊天"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="dialog_advanced" from="Runtime" to="." method="_on_Runtime_dialog_advanced"]
[connection signal="request_advance" from="Runtime" to="." method="_on_Runtime_request_advance"]
[connection signal="meta_clicked" from="Control/Label" to="." method="_on_Label_meta_clicked"]
[connection signal="tween_all_completed" from="Control/Label/Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="pressed" from="Control/StartButton" to="." method="_on_StartButton_pressed"]
